# relay

./: .env.example  .gitignore  README.md  pyproject.toml
data/: make_dataset.py  records.csv
docs/: ARCHITECTURE.md  VALIDATION.md
polybatch/: __init__.py  cli.py  cost.py  demo.py
polybatch/core/: __init__.py  chunking.py  coverage.py  models.py  orchestrator.py  parsing.py  tracker.py
polybatch/providers/: __init__.py  anthropic.py  base.py  google.py  mock.py  openai.py  registry.py
relay/: __init__.py  cli.py  cost.py  demo.py  env.py
relay/core/: __init__.py  chunking.py  coverage.py  models.py  orchestrator.py  parsing.py  tracker.py
relay/providers/: __init__.py  anthropic.py  base.py  google.py  mock.py  openai.py  registry.py
tests/: conftest.py  test_anthropic_provider.py  test_chunking.py  test_cli_providers.py  test_convergence.py  test_cost.py  test_coverage.py  test_demo.py  test_env.py  test_google_provider.py  test_mock_provider.py  test_openai_provider.py  test_parsing.py  test_registry.py  test_resume.py  test_tracker.py
